# uSTM32Template

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists_new.txt  README.md  build.sh  build_f103.sh  build_f411.sh  cm.txt  cpu_status.py  simulate.sh  stm32-arm-none-eabi.cmake  stm32.resc  stm32_f103.resc  stm32_f411.resc  stm32f1-arm-none-eabi.cmake  stm32f4-arm-none-eabi.cmake
Embassy_Shell/: README.md
Embassy_Shell/sources/main_app/: Cargo.toml
Embassy_Shell/sources/main_app/src/: main.rs  main_ok_blocking_read.rs  main_ok_nb_read.rs
Embassy_Shell/sources/main_app/src/bak/: main_dma_maybe_ok.rs  main_ok_full.rs  main_ok_read.rs
Embassy_Shell/sources/uart_hal/: Cargo.toml
Embassy_Shell/sources/uart_hal/src/: lib.rs
Embassy_Shell/sources/ushell/ushell2/: Cargo.toml  README.md
Embassy_Shell/sources/ushell/ushell2/src/history/: mod.rs
Embassy_Shell/sources/ushell/ushell2/src/input/: key_reader.rs
Embassy_Shell/sources/ushell/ushell2/src/logger/: mod.rs
Embassy_Shell/sources/ushell/ushell_logger/: Cargo.toml
FreeRTOS_Shell/sources/: CMakeLists.txt  check_elf.py  stm32_f411.resc  stm32f1-arm-none-eabi.cmake  stm32f4-arm-none-eabi.cmake
FreeRTOS_Shell/sources/FreeRTOS/: CMakeLists.txt
FreeRTOS_Shell/sources/linker/: stm32f103c8t6.ld  stm32f411ceu6.ld
FreeRTOS_Shell/sources/sources/app_stm32f103/: CMakeLists.txt
FreeRTOS_Shell/sources/sources/app_stm32f103/src/: hd44780_pcf8574.cpp  main_freertos_shell.cpp  main_n.cpp
FreeRTOS_Shell/sources/sources/app_stm32f411/: CMakeLists.txt
FreeRTOS_Shell/sources/sources/app_stm32f411/src/: main_bare_metal_shell.cpp
FreeRTOS_Shell/sources/sources/libs/: CMakeLists.txt
FreeRTOS_Shell/sources/sources/libs/HD44780/: CMakeLists.txt
FreeRTOS_Shell/sources/sources/libs/HD44780/inc/: hd44780_pcf8574.h
FreeRTOS_Shell/sources/sources/libs/ao_concrete/: CMakeLists.txt
FreeRTOS_Shell/sources/sources/libs/ao_config/: CMakeLists.txt
FreeRTOS_Shell/sources/sources/libs/ao_defs/: CMakeLists.txt
FreeRTOS_Shell/sources/sources/libs/ao_generic/: CMakeLists.txt
FreeRTOS_Shell/sources/sources/libs/button_registry/: CMakeLists.txt
FreeRTOS_Shell/sources/sources/libs/isr_handlers/: CMakeLists.txt
FreeRTOS_Shell/sources/sources/libs/sys_info/: CMakeLists.txt
FreeRTOS_Shell/sources/sources/libs/uart_access/: CMakeLists.txt
FreeRTOS_Shell/sources/sources/ushell/ushell_user/: CMakeLists.txt
RTIC_Shell/sources/: Cargo.toml  build.rs  build.sh  run_renode.sh  stm32f4xx.resc
RTIC_Shell/sources/.cargo/: config.toml
RTIC_Shell/sources/main_app/: Cargo.toml
RTIC_Shell/sources/main_app/src/: README.md  main.rs  main_ori.rs
RTIC_Shell/sources/uart_hal/: Cargo.toml
RTIC_Shell/sources/uart_hal/src/: lib.rs
RTIC_Shell/sources/ushell/ushell2/: Cargo.toml
RTIC_Shell/sources/ushell/ushell2/src/: lib.rs
RTIC_Shell/sources/ushell/ushell_dispatcher/: Cargo.toml
RTIC_Shell/sources/ushell/ushell_dispatcher/src/: lib.rs
RTIC_Shell/sources/ushell/ushell_input/: Cargo.toml
RTIC_Shell/sources/ushell/ushell_logger/: README.md
RTIC_Shell/sources/ushell/ushell_logger/src/: lib.rs
RTIC_Shell/sources/ushell/ushell_usercode/src/: lib.rs  shortcuts.cfg
RTIC_Shell/sources/ushell_ctx/: Cargo.toml
RTIC_Shell/sources/ushell_ctx/src/: lib.rs
RTIC_Shell/sources/ushell_usercode/src/: commands.rs
ThreadX_Shell/: CMakeLists.txt  arm-none-eabi.cmake  build.sh
ThreadX_Shell/sources/: CMakeLists.txt  build_f103.sh  build_f411.sh  renode_f103.sh  renode_f411.sh  stm32f1-arm-none-eabi.cmake  stm32f1-arm-none-eabi_new.cmake  stm32f4-arm-none-eabi.cmake
ThreadX_Shell/sources/linker/: STM32F4xx.ld  stm32f103c8t6.ld  stm32f411ceu6.ld
ThreadX_Shell/sources/sources/: CMakeLists.txt
ThreadX_Shell/sources/sources/app/: CMakeLists.txt
ThreadX_Shell/sources/sources/app/src/: app_threadx.c  app_threadx.cpp
ThreadX_Shell/sources/sources/app/stm32f103/: CMakeLists.txt
ThreadX_Shell/sources/sources/app/stm32f411/: CMakeLists.txt
ThreadX_Shell/sources/sources/app_stm32f411/src/: tx_initialize_low_level.s
ThreadX_Shell/sources/sources/libs/: CMakeLists.txt
ThreadX_Shell/sources/sources/libs/HD44780/: CMakeLists.txt
ThreadX_Shell/sources/sources/libs/st_hal/: CMakeLists.txt
ThreadX_Shell/sources/sources/libs/uart_access/: CMakeLists.txt
ThreadX_Shell/sources/sources/threadx_port/: CMakeLists.txt
ThreadX_Shell/sources/sources/threadx_port/shared/: syscalls.c
ThreadX_Shell/sources/sources/threadx_port/stm32f103/: CMakeLists.txt
ThreadX_Shell/sources/sources/threadx_port/stm32f411/: CMakeLists.txt
ThreadX_Shell/sources/startup/: startup_stm32f4xx.s
ThreadX_Shell/sources/test/PICSimLab/stm32f103/: shell_lcd.pcf  shell_lcd.pzw
ThreadX_Shell/sources/threadx/: CMakeLists.txt
ThreadX_Shell/sources/threadx/common/inc/: tx_thread.h  tx_user_sample.h
ThreadX_Shell/sources/threadx/common/src/: txe_queue_create.c
ThreadX_Shell/sources/threadx/ports/cortex_m4/: CMakeLists.txt
ThreadX_Shell/src/: app_threadx.c
ThreadX_Shell/threadx/common/inc/: tx_api.h
ThreadX_Shell/threadx_user_cfg/: tx_user.h
Zephyr_Shell/: CMakeLists.txt  app.overlay  build.sh  install_zephyr.md  prj.conf
Zephyr_Shell/libs/: CMakeLists.txt
Zephyr_Shell/libs/HD44780/: CMakeLists.txt
Zephyr_Shell/libs/HD44780/inc/: hd44780_pcf8574.h
Zephyr_Shell/libs/HD44780/src/: hd44780_pcf8574.cpp
Zephyr_Shell/libs/uart_access/: CMakeLists.txt
Zephyr_Shell/libs/uart_access/inc/: uart_access.h
Zephyr_Shell/libs/uart_access/src/: uart_access.cpp
Zephyr_Shell/libs/ushell/ushell_core/ushell_core/: CMakeLists.txt
Zephyr_Shell/libs/ushell/ushell_core/ushell_core_config/: CMakeLists.txt
Zephyr_Shell/libs/ushell/ushell_core/ushell_core_utils/: CMakeLists.txt
Zephyr_Shell/libs/ushell/ushell_settings/: CMakeLists.txt
Zephyr_Shell/libs/ushell/ushell_user/ushell_user_root/: CMakeLists.txt
Zephyr_Shell/src/: lcd_objects.c  lcd_objects.h  main.c  main.cpp
Zephyr_Shell/test/PICSimLab/: zephyr.pzw
sources/app/: CMakeLists.txt
sources/app/src/: main.cpp  main_bare_metal.cpp  main_f103.cpp  main_f411.cpp  main_freertos_shell.cpp
(+132 files in other folders)
