#main_app
[package]
name = "stm32f4-embassy-shell"
version = "0.1.0"
edition = "2021"

[features]
hosted = []

[dependencies]
# Enable async feature!
ushell2 = { path = "../ushell/ushell2", features = ["async"] }
ushell_usercode = { path = "../ushell_usercode" }
ushell_config = { path = "../ushell/ushell_config" }
ushell_dispatcher = { path = "../ushell/ushell_dispatcher" }
ushell_input = { path = "../ushell/ushell_input" }
ushell_logger = { path = "../ushell/ushell_logger" }

# Embassy async runtime
embassy-executor = { version = "0.6.0", features = ["arch-cortex-m", "executor-thread", "integrated-timers"] }
embassy-time = { version = "0.3.0" }
embassy-sync = { version = "0.6.0" }

# STM32 HAL with Embassy support
embassy-stm32 = { version = "0.1.0", features = ["stm32f411re", "time-driver-any", "unstable-pac", "memory-x"] }

# Cortex-M
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.3"

# Panic handler
panic-halt = "0.2"

# Heapless data structures
heapless = "0.9.1"
nb = "1.0"

