#main_app
[package]
name = "stm32f4-embassy-shell"
version = "0.1.0"
edition = "2021"

[features]
hosted = []

[dependencies]
uart_hal = { path = "../uart_hal" }

# Enable async feature!
ushell2 = { path = "../ushell/ushell2", features = ["async"] }
ushell_usercode = { path = "../ushell/ushell_usercode" }
ushell_dispatcher = { path = "../ushell/ushell_dispatcher" }

# Embassy async runtime
embassy-executor = { version = "0.6.0", features = ["arch-cortex-m", "executor-thread", "integrated-timers"] }
embassy-time = { version = "0.3.0" }
embassy-sync = { version = "0.6.0" }

# STM32 HAL with Embassy support
embassy-stm32 = { version = "0.1.0", features = ["stm32f411re", "time-driver-any", "unstable-pac", "memory-x"] }

# Cortex-M
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.3"

# Panic handler
panic-halt = "0.2"

# Safe static initialization
static_cell = "2.1"

# Heapless data structures
heapless = "0.9.1"
