[package]
name = "ushell2"
version = "0.2.0"
edition = "2021"
publish = true

description = "Lightweight no_std shell runtime for interactive CLI applications"
license = "MIT"
repository = "https://github.com/userx007/uRustShell"
homepage = "https://github.com/userx007/uRustShell"
documentation = "https://docs.rs/ushell2"
keywords = ["shell", "command-line"]
categories = ["development-tools", "command-line-utilities"]
authors = ["userx007 <vmpxxl@gmail.com>"]

[features]
default = ["heapless"]        # no_std by default
use-heapless = ["heapless"]   # Use heapless for string formatting
history-persistence = []
heap-history = []
heap-input-buffer = []
hosted = ["dep:winapi", "dep:termios"]  # Enable platform dependencies when hosted
async = []

[dependencies]
heapless = { version = "0.9.1", optional = true }
winapi = { version = "0.3.9", features = ["consoleapi", "wincon", "processenv", "handleapi", "winbase"], optional = true }
termios = { version = "0.3.3", optional = true }
critical-section = "1.1"


[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["consoleapi", "wincon", "processenv", "handleapi"] }


[lib]
doctest = false