[package]
name = "ushell_logger"
version = "0.1.0"
edition = "2021"

description = "Lightweight logging library for both no_std embedded and hosted environments"
license = "MIT"
repository = "https://github.com/userx007/uRustShell"
homepage = "https://github.com/userx007/uRustShell"
documentation = "https://docs.rs/ushell_logger"
keywords = ["logging", "no_std", "embedded", "uart", "logger"]
categories = ["embedded", "no-std", "development-tools::debugging"]
authors = ["userx007 <vmpxxl@gmail.com>"]

[dependencies]
# Only needed for no_std to format strings in macros
heapless = { version = "0.9.1", optional = true }
# Required for thread-safe critical sections in no_std
critical-section = "1.1"

[features]
default = ["heapless"]        # no_std by default
hosted = []                   # Enable for hosted environments with std
use-heapless = ["heapless"]   # Use heapless for string formatting

[lib]
doctest = false
