[package]
name = "ushell2"
version = "0.2.0"
edition = "2021"
publish = true

description = "Lightweight no_std shell runtime for interactive CLI applications"
license = "MIT"
repository = "https://github.com/userx007/uRustShell"
homepage = "https://github.com/userx007/uRustShell"
documentation = "https://docs.rs/ushell2"
keywords = ["shell", "command-line"]
categories = ["development-tools", "command-line-utilities"]
authors = ["userx007 <vmpxxl@gmail.com>"]

[features]
async = []

# Hosted environment support (for development/testing on desktop)
hosted = []

# Default: sync mode (bare metal compatible)
default = []


[dependencies]
heapless = "0.9.1"
ushell_input = { version = "0.1.0", path = "../ushell_input" }
ushell_logger = { path = "../ushell_logger" }


[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["consoleapi", "wincon", "processenv", "handleapi"] }
