[package]
name = "ushell_input"
version = "0.1.0"
edition = "2021"

description = "Core of the shell framework."
license = "MIT"
repository = "https://github.com/userx007/uRustShell"
homepage = "https://github.com/userx007/uRustShell"
documentation = "https://docs.rs/ushell_input"
keywords = ["shell", "template", "command-line", "framework"]
categories = ["command-line-utilities"]
authors = ["userx007 <vmpxxl@gmail.com>"]

[dependencies]
heapless = "0.9.1"
ushell_logger = { path = "../ushell_logger" }

# Platform-specific dependencies - enabled only when 'hosted' feature is active
winapi = { version = "0.3.9", features = ["consoleapi", "wincon", "processenv", "handleapi", "winbase"], optional = true }
termios = { version = "0.3.3", optional = true }

[features]
default = []                  # no_std by default for embedded
history-persistence = []
heap-history = []
heap-input-buffer = []
hosted = ["dep:winapi", "dep:termios"]  # Enable platform dependencies when hosted

[lib]
doctest = false